<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:id="@+id/constLayout">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/like_detail_imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/productImage_detail_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sample1" />

            <ImageButton
                android:id="@+id/back_detail_imageButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_detail_arrow_back" />

            <ImageView
                android:id="@+id/user_detail_imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productImage_detail_imageView"
                android:src="@drawable/ic_detail_user" />

            <TextView
                android:id="@+id/name_detail_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/detail_name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/user_detail_imageView"
                app:layout_constraintTop_toTopOf="@+id/user_detail_imageView" />

            <TextView
                android:id="@+id/address_detail_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detail_address"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/name_detail_textView"
                app:layout_constraintTop_toBottomOf="@+id/name_detail_textView" />

            <TextView
                android:id="@+id/face_detail_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/detail_face"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/name_detail_textView" />

            <TextView
                android:id="@+id/temperature_detail_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/detail_temp"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/face_detail_textView"
                app:layout_constraintEnd_toStartOf="@+id/face_detail_textView"
                app:layout_constraintTop_toTopOf="@+id/face_detail_textView" />

            <TextView
                android:id="@+id/manner_detail_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detail_manner"
                app:layout_constraintEnd_toEndOf="@+id/face_detail_textView"
                app:layout_constraintTop_toBottomOf="@+id/face_detail_textView" />

            <View
                android:id="@+id/detail_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/user_detail_imageView"
                tools:layout_editor_absoluteX="-16dp" />

            <TextView
                android:id="@+id/productTitle_detail_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/detail_title"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_divider" />

            <TextView
                android:id="@+id/productWrite_detail_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/detail_write"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/productTitle_detail_textView"
                app:layout_constraintTop_toBottomOf="@+id/productTitle_detail_textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <ImageButton
        android:id="@+id/like_detail_imageButton"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_main_like" />

    <View
        android:id="@+id/detail_divider2"
        android:layout_width="1dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/like_detail_imageButton"
        app:layout_constraintStart_toEndOf="@+id/like_detail_imageButton"
        app:layout_constraintTop_toTopOf="@+id/like_detail_imageButton" />

    <TextView
        android:id="@+id/price_detail_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/detail_price"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/detail_divider2"
        app:layout_constraintStart_toEndOf="@+id/detail_divider2"
        app:layout_constraintTop_toTopOf="@+id/detail_divider2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chat_detail_button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/detail_chat"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/confirm_button"
        app:layout_constraintBottom_toBottomOf="@+id/price_detail_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/price_detail_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>